k8s-cicd-sample/nodejs-api-pipeline/manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appserver
  namespace: vote-dog-cat-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: appserver
spec:
  rules:
    - http:
        paths:
          - path: /welcome
            backend:
              serviceName: appserver
              servicePort: 8080
